syntax = "proto3";

package envoy.extensions.http.cache_v2.simple_http_cache.v3;

import "xds/annotations/v3/status.proto";

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.http.cache_v2.simple_http_cache.v3";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/http/cache_v2/simple_http_cache/v3;simple_http_cachev3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;
option (xds.annotations.v3.file_status).work_in_progress = true;

// [#protodoc-title: SimpleHttpCache CacheFilter storage plugin]

// [#extension: envoy.extensions.http.cache_v2.simple]
message SimpleHttpCacheV2Config {
}
